serious expansion of the open questions section

--- a/finite.tex
+++ b/finite.tex
@@ -248,7 +248,7 @@ The context for $MUP$ is considerably more complicated, but Quillen's theorem ca
 The context for $MOP$, by contrast, is reasonably simple.  \Cref{CalculationOfPiStarMO} shows that the scheme $\Spec MOP_0$ classifies formal group laws over $\F_2$ which admit logarithms, so that $\context{MOP}$ consists of the groupoid of formal group laws with logarithms and isomorphisms between them.  This admits a natural deformation-retraction to the moduli consisting just of $\G_a$ and its automorphisms, expressing the redundancy in $MOP_0(X)$ encoded in the splitting of \Cref{MOSplitsIntoHF2s}.
 \end{example}
 
-\begin{remark}
+\begin{remark}\label{MUstarVsMUAsModuli}
 The algebraic moduli $\context{MU} = (\Spec MU_*, \Spec MU_* MU)$ and the topological moduli $(MU, MU \sm MU)$ are quite different.  An orientation $MU \to E$ selects a coordinate on the formal group $\CP^\infty_E$, but $\CP^\infty_E$ itself exists independently of the orientation.  Hence, while $\context{MU}(E_*)$ can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring $E_*$, the groupoid $\CatOf{RingSpectra}(\sheaf D_{MU}, E)$ has only \emph{one} connected component corresponding to the formal group $\CP^\infty_E$ intrinsic to $E$.\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor $MU$ represents as an $E_\infty$ ring spectrum.  To date, this functor has not been algebraically recognized.}
 \end{remark}
 
@@ -1141,7 +1141,7 @@ The spectrum of $\CatOf{Spectra}_{(p)}^{\mathrm{fin}}$ consists of the thick sub
 Using \Cref{CdEqualsDd}, we can characterize $\CatOf C_d$ as the kernel of $K(d-1)_*$.  This shows it to be a prime $\otimes$--ideal: \[K(d-1)_*(X \sm Y) \cong K(d-1)_* X \otimes_{K(d-1)_*} K(d-1)_* Y\] is zero exactly when at least one of $X$ and $Y$ is $K(d-1)$--acyclic.
 \end{proof}
 
-\begin{corollary}[{cf.\ \Cref{ThickSubcatClassification} and \Cref{CdEqualsDd}}]
+\begin{corollary}[{cf.\ \Cref{ThickSubcatClassification} and \Cref{CdEqualsDd}}]\label{MUInducesSpectrumHomeo}
 The functor \[\context{MU}(-)\co \CatOf{Spectra}^{\fin} \to \CatOf{Coh}(\context{MU})\] induces\footnote{This has to be interpreted delicately, as the functor $\context{MU}(-)$ is not (quite) a functor of triangulated categories~\cite[2.4.2]{MoravaCplxBordismInAT}.} a homeomorphism of the spectrum of $\CatOf{Spectra}^{\fin}$ to that of $\moduli{fg}$. \qed
 \end{corollary}
 
@@ -1249,7 +1249,7 @@ E_2^{*, *} = H^*(\context{E_d}; \omega^{\otimes *}) \Rightarrow \pi_* \widehat L
 \end{theorem}
 
 The utility of this Theorem is in the identification of the stack $\context{E_d} \cong (\moduli{fg})^\wedge_{\Gamma_d}$ from \Cref{DefnChromaticHomologyThys}.  Our algebraic analysis from \Cref{LubinTateModuliThm} and \Cref{LubinTateModuliThmInFGLTerms} shows a further identification \[\context{E_{\Gamma_d}} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \InternalAut(\Gamma_d).\]  This computation is thus boiled down to a calculation of the cohomology of the $\Aut(\Gamma_d)$--representations arising via \Cref{ActionBySnLiftsToLTn} as the global sections of the sheaves $\omega^{\otimes *}$ (cf.\ the discussion in \Cref{HopfAlgebrasFromFiniteGroups} and \Cref{HF2HomologyIsValuedInAutGaEquivarModules}).\footnote{In fact, the stable \emph{operations} of $E_d$ take the form of the twisted group-ring $E_d^0 E_d = E_d^0\<\!\<\Aut(\Gamma_d)\>\!\>$.}  We will later deduce the following polite description of $\Aut \Gamma_d$:
-\begin{theorem}[{cf.\ \Cref{FormOfStabilizerGroup}}]
+\begin{theorem}[{cf.\ \Cref{FormOfStabilizerGroup}}]\label{FormOfStabilizerGroupEarly}
 \index{Lubin Tate stack@Lubin--Tate stack!stabilizer}For $\Gamma_d$ the Honda formal group law of height $d$ over a perfect field $k$ of positive characteristic $p$, we compute \[\Aut \Gamma_d \cong \left( \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] where $\phi$ denotes a lift of the Frobenius from $k$ to $\W_p(k)$. \qed
 \end{theorem}
 
