--- a/intro.tex
+++ b/intro.tex
@@ -60,7 +60,7 @@ Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\St
 
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
-\begin{theorem}[{Ochanine~\cite{Ochanine}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{orientation!Witten genus}
+\begin{theorem}[{Ochanine~\cite{Ochanine,OchanineEnrichmentToKO}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{orientation!Witten genus}
 There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $Z$ is a $\Spin$ manifold such that half its first Pontryagin class vanishes---that is, if $Z$ lifts to a $\String$--manifold---then $\sigma(Z)$ lands in the subring $MF \subseteq \Z\ps{q}$ of \index{modular form!q expansion@$q$--expansion}$q$--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem}
 
