--- a/main.bib
+++ b/main.bib
@@ -128,6 +128,15 @@ MRREVIEWER = {D. Zelinsky},
        URL = {http://dx.doi.org/10.2307/1993268},
 }
 
+@article{ABP,
+  title={The structure of the spin cobordism ring},
+  author={Anderson, Donald W and Brown, EH and Peterson, Franklin P},
+  journal={Annals of Mathematics},
+  pages={271--298},
+  year={1967},
+  publisher={JSTOR}
+}
+
 @article {Ando,
     AUTHOR = {Ando, Matthew},
      TITLE = {Isogenies of formal group laws and power operations in the
@@ -234,6 +243,17 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {Neil P. Strickland},
        DOI = {10.1090/conm/279/04552},
        URL = {http://dx.doi.org/10.1090/conm/279/04552},
+}
+
+@article{AMS,
+  title={Completions of ℤ/(p)--Tate cohomology of periodic spectra},
+  author={Ando, Matthew and Morava, Jack and Sadofsky, Hal},
+  journal={Geometry \& Topology},
+  volume={2},
+  number={1},
+  pages={145--174},
+  year={1998},
+  publisher={Mathematical Sciences Publishers}
 }
 
 @article {AndoStrickland,
@@ -369,6 +389,13 @@ MRREVIEWER = {J. P. C. Greenlees},
        URL = {http://dx.doi.org/10.1016/j.aim.2013.12.023},
 }
 
+@article{Beardsley,
+  title={Constructions of {$MU$} by Attaching {$E_k$}-cells in Odd Degrees},
+  author={Beardsley, Jonathan},
+  journal={arXiv preprint arXiv:1708.03042},
+  year={2017}
+}
+
 @article {BehrensBuildings,
     AUTHOR = {Behrens, Mark},
      TITLE = {Buildings, elliptic curves, and the {$K(2)$}-local sphere},
@@ -452,6 +479,16 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {Paul G. Goerss},
        DOI = {10.1016/j.aim.2012.02.023},
        URL = {http://dx.doi.org/10.1016/j.aim.2012.02.023},
+}
+
+@article{BehrensRootInv,
+  title={Root invariants in the Adams spectral sequence},
+  author={Behrens, Mark},
+  journal={Transactions of the American Mathematical Society},
+  volume={358},
+  number={10},
+  pages={4279--4341},
+  year={2006}
 }
 
 @article{BehrensLaures,
@@ -674,6 +711,14 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
        URL = {http://dx.doi.org/10.1016/0022-4049(82)90020-2},
 }
 
+@book{ConnerFloyd,
+  title={The relation of cobordism to {$K$}-theories},
+  author={Conner, Pierre E and Floyd, Edwin Earl},
+  volume={28},
+  year={1966},
+  publisher={Springer}
+}
+
 @incollection {Davis,
     AUTHOR = {Davis, Donald M.},
      TITLE = {Computing {$v_1$}-periodic homotopy groups of spheres and some
@@ -809,6 +854,24 @@ MRREVIEWER = {Donald M. Davis},
   year={2007}
 }
 
+@inproceedings{GiambalvoPengelley,
+  title={The homology of MSpin},
+  author={Giambalvo, Vincent and Pengelley, David J},
+  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
+  volume={95},
+  number={3},
+  pages={427--436},
+  year={1984},
+  organization={Cambridge University Press}
+}
+
+@article{GKV,
+  title={Elliptic algebras and equivariant elliptic cohomology},
+  author={Ginzburg, Victor and Kapranov, Mikhail and Vasserot, Eric},
+  journal={arXiv preprint q-alg/9505012},
+  year={1995}
+}
+
 @incollection {GoerssDieudonne,
     AUTHOR = {Goerss, Paul G.},
      TITLE = {Hopf rings, {D}ieudonn\'e modules, and {$E_*\Omega^2S^3$}},
@@ -883,6 +946,35 @@ MRREVIEWER = {Birgit Richter},
        URL = {http://dx.doi.org/10.1090/conm/146/01218},
 }
 
+@article{Gonzalez,
+  title={A vanishing line in the {$BP \langle 1 \rangle$}-Adams spectral sequence},
+  author={Gonz{\'a}lez, Jes{\'u}s},
+  journal={Topology},
+  volume={39},
+  number={6},
+  pages={1137--1153},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{GreenleesStrickland,
+  title={Varieties and local cohomology for chromatic group cohomology rings},
+  author={Greenlees, JPC and Strickland, NP},
+  journal={Topology},
+  volume={38},
+  number={5},
+  pages={1093--1139},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{Grojnowski,
+  title={Delocalized equivariant elliptic cohomology, inElliptic cohomology, geometry, and applications, and higher chromatic analogs},
+  author={Grojnowski, I},
+  journal={LMS Lecture Notes},
+  volume={342}
+}
+
 @book {GrothendieckCristaux,
     AUTHOR = {Grothendieck, Alexandre},
      TITLE = {Groupes de {B}arsotti-{T}ate et cristaux de {D}ieudonn\'e},
@@ -902,6 +994,16 @@ MRREVIEWER = {Robert A. Morris},
   volume={288},
   year={1971},
   publisher={Springer}
+}
+
+@article{HahnMitchell,
+  title={Iwasawa theory for {$K(1)$}-local spectra},
+  author={Hahn, Rebekah and Mitchell, Stephen},
+  journal={Transactions of the American Mathematical Society},
+  volume={359},
+  number={11},
+  pages={5207--5238},
+  year={2007}
 }
 
 @article {Harris,
@@ -1268,6 +1370,17 @@ MRREVIEWER = {Gabriele Vezzosi},
               {http://muse.jhu.edu/journals/american_journal_of_mathematics/v124/124.6hovey.pdf},
 }
 
+@article{HoveyVnEltsOfRings,
+  title={{$v_n$}-elements in ring spectra and applications to bordism theory},
+  author={Hovey, Mark},
+  journal={Duke Mathematical Journal},
+  volume={88},
+  number={2},
+  pages={327--356},
+  year={1997},
+  publisher={Duke University Press}
+}
+
 @article {HoveyStrickland,
     AUTHOR = {Hovey, Mark and Strickland, Neil P.},
      TITLE = {Morava {$K$}-theories and localisation},
@@ -1300,6 +1413,24 @@ MRREVIEWER = {J. P. C. Greenlees},
   pages={249},
   year={1991},
   organization={Springer}
+}
+
+@article {HLP,
+    AUTHOR = {Hughes, Adam and Lau, JohnMark and Peterson, Eric},
+     TITLE = {Multiplicative 2-cocycles at the prime 2},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {217},
+      YEAR = {2013},
+    NUMBER = {3},
+     PAGES = {393--408},
+      ISSN = {0022-4049},
+     CODEN = {JPAAA2},
+   MRCLASS = {19L41 (55N22)},
+  MRNUMBER = {2974221},
+MRREVIEWER = {Fausto Jarqu{\'{\i}}n Z{\'a}rate},
+       DOI = {10.1016/j.jpaa.2012.06.031},
+       URL = {http://dx.doi.org/10.1016/j.jpaa.2012.06.031},
 }
 
 @article {HuntonTurner,
@@ -1432,6 +1563,13 @@ MRREVIEWER = {Bj{\"o}rn Schuster},
        URL = {http://dx.doi.org/10.1016/j.aim.2003.10.008},
 }
 
+@phdthesis{KnightThesis,
+  title={A p-adic Jacquet-Langlands Correspondence},
+  author={Knight, Erick},
+  year={2016},
+  school={Harvard University Cambridge, Massachusetts}
+}
+
 @article {Kochman,
     AUTHOR = {Kochman, Stanley O.},
      TITLE = {A chain functor for bordism},
@@ -1461,6 +1599,17 @@ MRREVIEWER = {Joel M. Cohen},
 MRREVIEWER = {Alan Koch},
        DOI = {10.1112/S0010437X12000723},
        URL = {http://dx.doi.org/10.1112/S0010437X12000723},
+}
+
+@article{KreckStolz,
+  title={HP 2-bundles and elliptic homology},
+  author={Kreck, Matthias and Stolz, Stephan},
+  journal={Acta Mathematica},
+  volume={171},
+  number={2},
+  pages={231--261},
+  year={1993},
+  publisher={Springer}
 }
 
 @incollection {Kriz,
@@ -1493,6 +1642,15 @@ MRREVIEWER = {Yves F{\'e}lix},
   MRNUMBER = {2475626},
 MRREVIEWER = {Keith Peter Johnson},
        URL = {http://projecteuclid.org/euclid.hha/1251832476},
+}
+
+@incollection{LandweberEll,
+  title={Elliptic cohomology and modular forms},
+  author={Landweber, Peter S},
+  booktitle={Elliptic curves and modular forms in algebraic topology},
+  pages={55--68},
+  year={1988},
+  publisher={Springer}
 }
 
 @article {LandweberHomologicalComodules,
@@ -1776,6 +1934,17 @@ MRREVIEWER = {Donald M. Davis},
 MRREVIEWER = {Andrzej Kozlowski},
 }
 
+@article{MathewMeier,
+  title={Affineness and chromatic homotopy theory},
+  author={Mathew, Akhil and Meier, Lennart},
+  journal={Journal of Topology},
+  volume={8},
+  number={2},
+  pages={476--528},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
 @book {Matsumura,
     AUTHOR = {Matsumura, Hideyuki},
      TITLE = {Commutative ring theory},
@@ -1869,6 +2038,13 @@ MRREVIEWER = {S. Bloch},
   number={1},
   pages={67--72},
   year={1983}
+}
+
+@article{McTague,
+  title={{$\tmf$} is not a ring spectrum quotient of {$\String$} bordism},
+  author={McTague, Carl},
+  journal={arXiv preprint arXiv:1312.2440},
+  year={2013}
 }
 
 @book {Messing,
@@ -2224,6 +2400,26 @@ MRREVIEWER = {J. F. Adams},
        URL = {http://dx.doi.org/10.2969/jmsj/02540707},
 }
 
+@article{OchanineEnrichmentToKO,
+  title={Elliptic genera, modular forms over {$KO_*$}, and the Brown-Kervaire invariant},
+  author={Ochanine, Serge},
+  journal={Mathematische Zeitschrift},
+  volume={206},
+  number={1},
+  pages={277--291},
+  year={1991},
+  publisher={Springer}
+}
+
+@article{OchanineSUModules,
+  title={Modules de {$SU$}-bordisme. Applications},
+  author={Ochanine, Serge},
+  journal={Bull. Soc. Math. Fr},
+  volume={115},
+  pages={257--289},
+  year={1987}
+}
+
 @article {Ochanine,
     AUTHOR = {Ochanine, Serge},
      TITLE = {Sur les genres multiplicatifs d\'efinis par des int\'egrales
@@ -2243,10 +2439,32 @@ MRREVIEWER = {P. S. Landweber},
        URL = {http://dx.doi.org/10.1016/0040-9383(87)90055-3},
 }
 
+@article{Pengelley,
+  title={The homotopy type of MSU},
+  author={Pengelley, David J},
+  journal={American Journal of Mathematics},
+  volume={104},
+  number={5},
+  pages={1101--1123},
+  year={1982},
+  publisher={JSTOR}
+}
+
 @ARTICLE{PetersonStapleton,
   author = {Peterson, Eric and Stapleton, Nathaniel},
   title = {Isogenies of Formal Groups Laws and Power Operations in the Cohomology Theories {$E_n$}, Revisited},
   note = {In preparation}
+}
+
+@article{Priddy,
+  title={A cellular construction of BP and other irreducible spectra},
+  author={Priddy, Stewart},
+  journal={Mathematische Zeitschrift},
+  volume={173},
+  number={1},
+  pages={29--34},
+  year={1980},
+  publisher={Springer}
 }
 
 @article {Quillen,
@@ -2779,6 +2997,13 @@ MRREVIEWER = {N. J. Kuhn},
 MRREVIEWER = {W. Stephen Wilson},
        DOI = {10.1090/S0002-9947-99-02436-8},
        URL = {http://dx.doi.org/10.1090/S0002-9947-99-02436-8},
+}
+
+@phdthesis{Stroilova,
+  title={The generalized Tate construction},
+  author={Stroilova, Olga},
+  year={2012},
+  school={Massachusetts Institute of Technology}
 }
 
 @book {Switzer,
