clean up asymptotics

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -147,13 +147,13 @@ Applying the functor $\Spf \circ \pi_0$ to this pro-system yields the formal sch
 
 \subsection*{Asymptotics in homotopy theory}
 
-Various large-scale behaviors of the $MU$--Adams spectral sequence are poorly understood and would yield interesting information about stable homotopy theory as a whole.  For instance, the following question is pulled from Mike Hopkins~\cite[Section 10]{HopkinsOnRavenel}: let $g(n)$ denote the largest $MU$--Adams filtration degree of an element of $\pi_n \S$ (i.e., $g$ traces the vanishing curve on the $E_\infty$ page of the $MU$--Adams spectral sequence).  The nilpotence conjectures are all equivalent to the statement \[\lim_{n \to \infty} \frac{g(n)}{n} = 0,\] but little is known about the asymptotics of $g$ beyond this statement.  For instance, one might ask: for what $\eps > 0$ does the asymptotic formula $g(n) = \Theta(n^{\eps})$ hold?  Various values have various consequences: sufficiently small values of $\eps$ entail the Telescope Conjecture (see below), and sufficiently large values entail its failure.  Hopkins and Smith claim a plausibility argument that $\eps = 1/2$, which is a Goldilocks value where no claim about the Telescope Conjecture can be made.
+Various large-scale behaviors of the $MU$--Adams spectral sequence are poorly understood and would yield interesting information about stable homotopy theory as a whole.  For instance, the following question is pulled from Mike Hopkins~\cite[Section 10]{HopkinsOnRavenel}: let $g(n)$ denote the largest $MU$--Adams filtration degree of an element of $\pi_n \S$ (i.e., $g$ traces the vanishing curve on the $E_\infty$ page of the $MU$--Adams spectral sequence).  The nilpotence conjectures are all equivalent to the statement \[\lim_{n \to \infty} \frac{g(n)}{n} = 0,\] but little is known about the asymptotics of $g$ beyond this statement.  For instance, one might ask: for what $\eps > 0$ does the asymptotic formula $g(n) = O(n^{\eps})$ hold, and what is the infimum $\eps_{\inf}$ over such values?  Various values of the infimum have various consequences: sufficiently small values entail the Telescope Conjecture (see the footnotes above), and sufficiently large values entail its failure.  Hopkins and Smith claim a plausibility argument that $\eps_{\inf} = 1/2$, which is a Goldilocks value where no consequence for the Telescope Conjecture can be deduced.
 
-Another important observation is that $\eta$ is not nilpotent in the $E_2$--term of the $MU$--Adams spectral sequence, and so generally the nilpotence theorems do not hold in the algebraic model $\CatOf{QCoh}(\moduli{fg})$ for the stable category.  Rather, the nilpotency of $\eta$ is enforced by a differential further in the spectral sequence.  This differential is actually also algebraic, but of a different nature: it stems from the $C_2$--fixed point spectral sequence for $KU^{hC_2} \simeq KO$.  Understanding what bouquet of extra algebraic techniques account for the general nilpotency of stable homotopy elements would be very interesting.
+Another important observation is that $\eta$ is not nilpotent in the $E_2$--term of the $MU$--Adams spectral sequence, and so generally the nilpotence theorems---the most impactful theorems known about the global stable category---do not hold in the algebraic model $\CatOf{QCoh}(\moduli{fg})$.  Rather, the nilpotency of $\eta$ is enforced by a differential further in the spectral sequence.  This differential is actually also algebraic, but of a different nature: it can be deduced from the $C_2$--fixed point spectral sequence for $KU^{hC_2} \simeq KO$.  Understanding what bouquet of extra algebraic techniques account for the general nilpotency of stable homotopy elements would be very interesting.
 
-One interesting observation about this same homotopy fixed point spectral sequence is that it has a horizontal vanishing line on the $E_4$ page.  This phenomenon is quite generic~\cite{MathewMeier}, and in particular it is also true of the descent spectral sequence for $\TMF$.  This is quite interesting: the moduli stack of elliptic curves (and most moduli stacks considered in arithmetic geometry) is Artinian, meaning that it has finite stabilizer groups, but these same finiteness is the source of the infinite cohomological dimension of the moduli of elliptic curves.  After all, every nontrivial finite group has infinite integral group cohomology.  In this sense, the derived moduli of elliptic curves enjoys the benefits of both worlds of finiteness: it still has finite stabilizer groups, but it is, in a certain sense, of \emph{finite} cohomological dimension.  Surely this is useful for something: there must be some facts that arithmetic geometers wish were true, but which are stymied by the infinite cohomological dimension of $\moduli{ell}$.
+Yet another interesting observation about this same homotopy fixed point spectral sequence is that it has a horizontal vanishing line on the $E_4$ page.  This phenomenon is quite generic~\cite{MathewMeier}, and in particular it is also true of the descent spectral sequence for $\TMF$.  This is quite intriguing: the moduli stack of elliptic curves is Artinian (as are most ``well-behaved'' moduli stacks considered in arithmetic geometry), meaning that it has finite stabilizer groups.  Such stacks are especially amenable to geometric study.  However, this same finiteness is the source of the infinite cohomological dimension of the moduli of elliptic curves: after all, every nontrivial finite group has infinite group cohomology with coefficients in the trivial integral representation.  In this sense, the \emph{derived} moduli of elliptic curves enjoys both of these benefits: it has finite stabilizer groups, and it simultaneously is, in a certain sense, of \emph{finite} cohomological dimension.  Surely this is useful for something: there must be some facts that arithmetic geometers wish were true, but which are stymied by the infinite cohomological dimension of $\moduli{ell}$.  Finding a use for this may well allow information to flow out of homotopy theory and into arithmetic geometry, itself an exciting prospect.
 
-A precise understanding of vanishing curves in other Adams spectral sequences, for instance Gonz\'{a}lez's results for the $BP\<1\>$--Adams spectral sequence~\cite{Gonzalez}, also give rise to sparsity results in the $MU$--Adams spectral sequence and hence control over the overall behavior.
+Finally, a precise understanding of vanishing curves in other Adams spectral sequences---for instance Gonz\'{a}lez's results for the $BP\<1\>$--Adams spectral sequence~\cite{Gonzalez}---also give rise to sparsity results in the $MU$--Adams spectral sequence, and hence control of the overall behavior.
 
 
 
