rerendering of the Loose Ends section

--- a/main.bib
+++ b/main.bib
@@ -2707,6 +2707,15 @@ MRREVIEWER = {R. G. Larson},
 MRREVIEWER = {A. K. Bousfield},
 }
 
+@article{SegalEll,
+  title={ELLIPTIC COHOMOLOGY [AFTER LANDWEBERSTONG, OCHANINE, WITTEN, AND OTHERS]},
+  author={Segal, Graeme},
+  journal={Ast{\'e}risque},
+  number={161-62},
+  pages={187--201},
+  year={1988}
+}
+
 @article {Shay,
     AUTHOR = {Shay, P. Brian},
      TITLE = {{${\rm mod}$} {$p$} {W}u formulas for the {S}teenrod algebra
