introduce a bunch of citations

--- a/main.bib
+++ b/main.bib
@@ -287,6 +287,24 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {A. Dold},
 }
 
+@article{Atiyah,
+  title={Thom complexes},
+  author={Atiyah, Michael Francis},
+  journal={Proceedings of the London Mathematical Society},
+  volume={3},
+  number={1},
+  pages={291--310},
+  year={1961},
+  publisher={Wiley Online Library}
+}
+
+@article{BaezDolan,
+  title={Euler characteristic versus homotopy cardinality},
+  author={Baez, John},
+  journal={Lecture at the Program on Applied Homotopy Theory, Fields Institute, Toronto, September},
+  year={2003}
+}
+
 @incollection{BakerCombinatorialFGLs,
   title={Combinatorial and arithmetic identities based on formal group laws},
   author={Baker, Andrew},
@@ -387,6 +405,13 @@ MRREVIEWER = {Amnon Neeman},
 MRREVIEWER = {J. P. C. Greenlees},
        DOI = {10.1016/j.aim.2013.12.023},
        URL = {http://dx.doi.org/10.1016/j.aim.2013.12.023},
+}
+
+@article{Beaudry,
+  title={The chromatic splitting conjecture at n= p= 2},
+  author={Beaudry, Agnes},
+  journal={arXiv preprint arXiv:1502.02190},
+  year={2015}
 }
 
 @article{Beardsley,
@@ -498,6 +523,13 @@ MRREVIEWER = {Paul G. Goerss},
   volume={16},
   pages={9--29},
   year={2009}
+}
+
+@book{BehrensLawson,
+  title={Topological automorphic forms},
+  author={Behrens, Mark and Lawson, Tyler},
+  year={2010},
+  publisher={American Mathematical Soc.}
 }
 
 @article{BeilinsonAdeles,
@@ -767,6 +799,13 @@ MRREVIEWER = {Julia Bergner},
   MRNUMBER = {883960 (88a:14049)},
 }
 
+@article{Devalapurkar,
+  title={Roots of unity in {$K(n)$}--local {$E_\infty$}-rings},
+  author={Devalapurkar, Sanath K},
+  journal={arXiv preprint arXiv:1707.09957},
+  year={2017}
+}
+
 @article {DevinatzHopkins,
     AUTHOR = {Devinatz, Ethan S. and Hopkins, Michael J.},
      TITLE = {The action of the {M}orava stabilizer group on the
@@ -803,6 +842,16 @@ MRREVIEWER = {Andrew J. Baker},
 MRREVIEWER = {Frederick Cohen},
        DOI = {10.2307/1971440},
        URL = {http://dx.doi.org/10.2307/1971440},
+}
+
+@article{DouglasHenriques,
+  title={Topological modular forms and conformal nets},
+  author={Douglas, Christopher L and Henriques, Andr{\'e} G},
+  journal={Mathematical foundations of quantum field theory and perturbative string theory},
+  volume={83},
+  number={341},
+  pages={7},
+  year={2011}
 }
 
 @preamble{
@@ -898,6 +947,15 @@ MRREVIEWER = {Neil P. Strickland},
   year = {2008}
 }
 
+@article{GoerssRealizingFamilies,
+  title={Realizing families of Landweber exact homology theories},
+  author={Goerss, Paul G},
+  journal={New topological contexts for Galois theory and algebraic geometry (BIRS 2008)},
+  volume={16},
+  pages={49--78},
+  year={2009}
+}
+
 @article {GoerssTMF,
     AUTHOR = {Goerss, Paul G.},
      TITLE = {Topological modular forms [after {H}opkins, {M}iller and
@@ -955,6 +1013,14 @@ MRREVIEWER = {Birgit Richter},
   pages={1137--1153},
   year={2000},
   publisher={Elsevier}
+}
+
+@book{GreenleesMay,
+  title={Generalized Tate cohomology},
+  author={Greenlees, John Patrick Campbell and May, J Peter},
+  volume={543},
+  year={1995},
+  publisher={American Mathematical Soc.}
 }
 
 @article{GreenleesStrickland,
@@ -1266,6 +1332,13 @@ MRREVIEWER = {Andrew J. Baker},
 MRREVIEWER = {Andrew J. Baker},
        DOI = {10.1090/S0894-0347-00-00332-5},
        URL = {http://dx.doi.org/10.1090/S0894-0347-00-00332-5},
+}
+
+@article{HopkinsLawson,
+  title={Strictly commutative complex orientation theory},
+  author={Hopkins, Michael J and Lawson, Tyler},
+  journal={arXiv preprint arXiv:1603.00047},
+  year={2016}
 }
 
 @ARTICLE{HopkinsLurie,
@@ -1750,6 +1823,16 @@ MRREVIEWER = {Rui Miguel Saramago},
        URL = {http://dx.doi.org/10.2140/gt.2010.14.1111},
 }
 
+@article{LawsonRealizability,
+  title={Realizability of the Adams-Novikov spectral sequence for formal 𝐴-modules},
+  author={Lawson, Tyler},
+  journal={Proceedings of the American Mathematical Society},
+  volume={135},
+  number={3},
+  pages={883--890},
+  year={2007}
+}
+
 @article{LawsonSecondaryPowerOps,
   title={Secondary power operations and the Brown-Peterson spectrum at the prime 2},
   author={Lawson, Tyler},
@@ -1901,6 +1984,28 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
        URL = {http://projecteuclid.org/euclid.dmj/1077313574},
 }
 
+@article{MahowaldRavenel,
+  title={The root invariant in homotopy theory},
+  author={Mahowald, Mark E and Ravenel, Douglas C},
+  journal={Topology},
+  volume={32},
+  number={4},
+  pages={865--898},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{MahowaldShick,
+  title={Root invariants and periodicity in stable homotopy theory},
+  author={Mahowald, Mark and Shick, Paul},
+  journal={Bulletin of the London Mathematical Society},
+  volume={20},
+  number={3},
+  pages={262--266},
+  year={1988},
+  publisher={Wiley Online Library}
+}
+
 @article {MahowaldThompson,
     AUTHOR = {Mahowald, Mark and Thompson, Robert D.},
      TITLE = {The {$K$}-theory localization of an unstable sphere},
@@ -2000,6 +2105,15 @@ MRREVIEWER = {Ian Hambleton},
    MRCLASS = {55-02 (18-02 57-02)},
   MRNUMBER = {1702278},
 MRREVIEWER = {R. M. Vogt},
+}
+
+@inproceedings{MayProblemsInLoopspaceTheory,
+  title={Problems in infinite loop space theory},
+  author={May, JP},
+  booktitle={Notas de Matemfiticas y Simposio, Ntimero},
+  volume={1},
+  pages={111--125},
+  year={1974}
 }
 
 @book {MayRingSpacesSpectra,
@@ -2679,6 +2793,13 @@ MRREVIEWER = {Keith Peter Johnson},
 MRREVIEWER = {Donald M. Davis},
 }
 
+@article{Salch,
+  title={The cohomology of the height four Morava stabilizer group at large primes},
+  author={Salch, Andrew},
+  journal={arXiv preprint arXiv:1607.01108},
+  year={2016}
+}
+
 @article {Schoeller,
     AUTHOR = {Schoeller, Colette},
      TITLE = {\'{E}tude de la cat\'egorie des alg\`ebres de {H}opf
@@ -2692,6 +2813,15 @@ MRREVIEWER = {Donald M. Davis},
    MRCLASS = {13.50 (18.00)},
   MRNUMBER = {0281709},
 MRREVIEWER = {R. G. Larson},
+}
+
+@article{SchwaenzlRolandVogt,
+  title={Adjoining roots of unity to {$E_\infty$} ring spectra in good cases--a remark},
+  author={Schw{\"a}nzl, Roland and Vogt, Rainer M and Waldhausen, Friedhelm},
+  journal={Contemp. Math},
+  volume={239},
+  pages={245--249},
+  year={1999}
 }
 
 @incollection {Segal,
@@ -2816,6 +2946,17 @@ MRREVIEWER = {A. H. Clark},
   year         = {2014},
 }
 
+@article{Stapleton,
+  title={Transchromatic generalized character maps},
+  author={Stapleton, Nathaniel},
+  journal={Algebraic \& Geometric Topology},
+  volume={13},
+  number={1},
+  pages={171--203},
+  year={2013},
+  publisher={Mathematical Sciences Publishers}
+}
+
 @article{SteenrodCyclic,
   title={Cyclic reduced powers of cohomology classes},
   author={Steenrod, NE},
@@ -2859,6 +3000,26 @@ MRREVIEWER = {Paul G. Goerss},
   volume={1116},
   year={1985},
   publisher={Springer}
+}
+
+@article{StolzTeichnerWhatIs,
+  title={What is an elliptic object?},
+  author={Stolz, Stephan and Teichner, Peter},
+  journal={London Mathematical Society Lecture Note Series},
+  volume={308},
+  pages={247},
+  year={2004},
+  publisher={Cambridge University Press}
+}
+
+@article{StolzTeichnerSusy,
+  title={Supersymmetric field theories and generalized cohomology},
+  author={Stolz, Stephan and Teichner, Peter},
+  journal={Mathematical foundations of quantum field theory and perturbative string theory},
+  volume={83},
+  pages={279},
+  year={2011},
+  publisher={American Mathematical Soc.}
 }
 
 @article {Stong,
@@ -3029,6 +3190,14 @@ MRREVIEWER = {W. Stephen Wilson},
   MRNUMBER = {1886843},
 }
 
+@book{Takhtajan,
+  title={Quantum mechanics for mathematicians},
+  author={Takhtadzhian, Leon Armenovich},
+  volume={95},
+  year={2008},
+  publisher={American Mathematical Soc.}
+}
+
 @article {ThomasonWilson,
     AUTHOR = {Thomason, Robert W. and Wilson, W. Stephen},
      TITLE = {Hopf rings in the bar spectral sequence},
@@ -3045,6 +3214,94 @@ MRREVIEWER = {W. Stephen Wilson},
 MRREVIEWER = {Stewart B. Priddy},
        DOI = {10.1093/qmath/31.4.507},
        URL = {http://dx.doi.org/10.1093/qmath/31.4.507},
+}
+
+@article {Torii5,
+    AUTHOR = {Torii, Takeshi},
+     TITLE = {{$K(n)$}-localization of the {$K(n+1)$}-local {$E_{n+1}$}-{A}dams spectral sequences},
+   JOURNAL = {Pacific J. Math.},
+  FJOURNAL = {Pacific Journal of Mathematics},
+    VOLUME = {250},
+      YEAR = {2011},
+    NUMBER = {2},
+     PAGES = {439--471},
+      ISSN = {0030-8730},
+     CODEN = {PJMAAI},
+   MRCLASS = {55P42 (55Q51 55T15 55T25)},
+  MRNUMBER = {2794609 (2012g:55012)},
+MRREVIEWER = {Vigleik Angeltveit},
+       DOI = {10.2140/pjm.2011.250.439},
+       URL = {http://dx.doi.org/10.2140/pjm.2011.250.439},
+}
+
+@article {Torii4,
+    AUTHOR = {Torii, Takeshi},
+     TITLE = {Comparison of {M}orava {$E$}-theories},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {266},
+      YEAR = {2010},
+    NUMBER = {4},
+     PAGES = {933--951},
+      ISSN = {0025-5874},
+     CODEN = {MAZEAX},
+   MRCLASS = {55N22 (19L10 55N20 55S05)},
+  MRNUMBER = {2729298 (2012a:55006)},
+MRREVIEWER = {John Hunton},
+       DOI = {10.1007/s00209-009-0605-9},
+       URL = {http://dx.doi.org/10.1007/s00209-009-0605-9},
+}
+
+@article {Torii3,
+    AUTHOR = {Torii, Takeshi},
+     TITLE = {H{KR} characters, {$p$}-divisible groups and the generalized
+              {C}hern character},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {362},
+      YEAR = {2010},
+    NUMBER = {11},
+     PAGES = {6159--6181},
+      ISSN = {0002-9947},
+     CODEN = {TAMTAM},
+   MRCLASS = {55N22 (14L05 55N20)},
+  MRNUMBER = {2661512 (2012c:55007)},
+MRREVIEWER = {Niko Naumann},
+       DOI = {10.1090/S0002-9947-2010-05194-3},
+       URL = {http://dx.doi.org/10.1090/S0002-9947-2010-05194-3},
+}
+
+@inproceedings {Torii2,
+    AUTHOR = {Torii, Takeshi},
+     TITLE = {Milnor operations and the generalized {C}hern character},
+ BOOKTITLE = {Proceedings of the {N}ishida {F}est ({K}inosaki 2003)},
+    SERIES = {Geom. Topol. Monogr.},
+    VOLUME = {10},
+     PAGES = {383--421},
+ PUBLISHER = {Geom. Topol. Publ., Coventry},
+      YEAR = {2007},
+   MRCLASS = {55N22 (55N20 55S05)},
+  MRNUMBER = {2402795 (2009f:55004)},
+MRREVIEWER = {Geoffrey M. L. Powell},
+       DOI = {10.2140/gtm.2007.10.383},
+       URL = {http://dx.doi.org/10.2140/gtm.2007.10.383},
+}
+
+@article {Torii1,
+    AUTHOR = {Torii, Takeshi},
+     TITLE = {On degeneration of one-dimensional formal group laws and
+              applications to stable homotopy theory},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {125},
+      YEAR = {2003},
+    NUMBER = {5},
+     PAGES = {1037--1077},
+      ISSN = {0002-9327},
+     CODEN = {AJMAAN},
+   MRCLASS = {55N22 (55P42 55P60)},
+  MRNUMBER = {2004428 (2004i:55006)},
+MRREVIEWER = {Mark Hovey},
 }
 
 @book {Vakil,
