--- a/mo.tex
+++ b/mo.tex
@@ -388,7 +388,7 @@ x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
 Applying \Cref{GradedAndGmEquivAgree} thus selects the original degree $n$ classes.
 \end{proof}
 
-Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics---so little, in fact, that we will freely move between the graded homotopy groups of a spectrum and the $0${\th} homotopy group of a periodic spectrum throughout the rest of this book.  The thrust of this Lemma, however, is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} $lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
+Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics---so little, in fact, that we will freely move between the graded homotopy groups of a spectrum and the $0${\th} homotopy group of a periodic spectrum throughout the rest of this book.  The thrust of this Lemma, however, is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
 The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2).\]
