reminder to pull from tyler’s problems list

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -24,6 +24,7 @@
 \section{The road ahead}\label{OpenQuestionsSection}
 
 \todo[inline]{Make sure you put references in for all these claims.}
+\todo[inline]{Look at Lawson's problems list: http://topology-octopus.herokuapp.com/problemsinhomotopytheory/show/HomePage}
 
 
 
